--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="el">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>Διαχείριση XML συλλογής με χρήση JS AJAX</title>
